syntax = "proto3";

// Definition of the Genre message, representing a movie genre entity.
message Genre {
  string id = 1;                    // Unique identifier for the genre.
  string name = 2;                  // Name of the genre.
  string description = 3;           // Description or additional information about the genre.
}

// Message containing page and limit of the data
message Pagination {
  int32 page = 1;
  int32 limit = 2;
}

// Message containing a list of genres.
message GenreList {
  repeated Genre genres = 1;  // List of Genre messages.
}

// Definition of the GenreService service.
service GenreService {
  rpc GetAllGenres (Pagination) returns (GenreList);  // RPC to get a list of all genres with pagination.
}
